# CowxBrowser

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  cowxbrowser.desktop  cowxbrowser.spec  install.py  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cowxbrowser/: ad_blocker.py  bookmarks_bar.py  bookmarks_manager.py  browser.py  download_manager.py  extensions_dialog.py  extensions_manager.py  find_bar.py  history_dialog.py  history_manager.py  main.py  reader_mode.py  session_manager.py  settings_dialog.py  tab_widget.py  theme.py  update_checker.py
tests/: test_imports.py
